css high contrast

--- a/index.html
+++ b/index.html
@@ -200,15 +200,62 @@
          </div>
      </section>-->
 
-          <section
-            class="slide dcube-page-full dcube-page-border dcube-border-c0 dcube-bgcolor-c4a"
-          >
+          <section class="slide dcube-page-full dcube-bgcolor-c2">
+            <div class="inside dcube-align-center center">
+              <div class="dcube-block">
+                <div class="grid">
+                  <h2 class="titre dcube-subtitle dcube-subtitle-dry">
+                    Ma présentation version speech-to-text
+                  </h2>
+                </div>
+
+                <p class="dcube-quote">
+                  bonjour je m'appelle emmanuel et je suis développeuse chez des
+                  hub des robes et un et binet de haïti spécialisée dans le
+                  développement le lahoud n'y a l'abbaye et la data mes sacs
+                  préférés sont ces sharp dunet et anular le bail gens entrent
+                  régulièrement et t'as un problème de time à haute je
+                  m'intéresse également aux aspects de l'intelligence
+                  artificielle notamment le speech tout texte thème on va
+                  aborder aujourd'hui étant sourde je lutte jour pour la
+                  cessibilité dans mon monde idéal tout doit être accessible
+                  aussi bien dans la vraie vie et dans le web
+                </p>
+                <div class="toggle-gp-article toggle-gp dcube-toggle-box">
+                  <button
+                    class="dcube-btn dcube-btn-toggle"
+                    aria-expanded="false"
+                    aria-controls="traduction-1"
+                  >
+                    Traduction
+                  </button>
+                  <div
+                    id="traduction-1"
+                    class="content-to-toggle is-hidden dcube-text-small center"
+                  >
+                    <p>
+                      Bonjour, je m'appelle Emmanuelle et je suis développeuse
+                      chez Dcube. Dcube est un cabinet de conseil IT spécialisé
+                      dans le développement, le cloud, l'IA, la BI et la data.
+                      Mes stacks préférés sont C# .NET et Angular. Le bug que je
+                      rencontre régulièrement est un problème de timeout. Je
+                      m'intéresse également aux aspects de l'intelligence
+                      artificielle notamment le Speech-To-Text, thème qu'on va
+                      aborder aujourd'hui. Etant sourde, je lutte chaque jour
+                      pour l'accessiblité. Dans mon monde idéal, tout doit
+                      accessible aussi bien dans la vraie vie que dans le Web.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="slide dcube-page-full dcube-bgcolor-c4a">
             <div class="inside dcube-align-center center">
               <div class="dcube-block">
                 <h2 class="dcube-title-chapter dcube-title-chapter-comfy">
-                  <span class="dcube-text-reinit dcube-item-block"
-                    >Sous-titrage des vidéos</span
-                  >
+                  <span class="dcube-text-reinit dcube-item-block">Titre</span>
                   <span class="sr"> </span>
                 </h2>
               </div>
